2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: Clean up the handling of the exact_completion
	property.

	* kiwi/python.py: Get rid of GObject stuff in base classes, move 
	it to kiwi utils
	* kiwi/utils.py: inline class initiable meta here 

2006-03-30  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.__init__): 
	Only set the mask if it's not empty

	* kiwi/ui/widgets/entry.py (ProxyEntry.set_mask_for_data_type): 
	Instead of skipping, try to do an educated guess of the mask.

2006-03-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/proxywidget.py: update the validation error tooltip 
	every time the value changes (for tooltips that containg the 
	invalid value)
	* po/kiwi.pot:
	* po/pt_BR.po: new translations
	* po/sv.po:

2005-03-29  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/colorbutton.py:
	* kiwi/ui/widgets/fontbutton.py:
	Add proxy widgets for gtk.ColorButton and gtk.FontButton.
	Fixes #2511

2006-03-29  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/gazpacholoader.py:
	* po/kiwi.pot:
	* po/pt_BR.po:
	* po/sv.po:
	pt_BR translation

2006-03-29  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/widgets/spinbutton.py: No need to press enter to notify that
	the value of the spinbutton changed.
	* tests/test_proxy.py: Fixing some tests and adding new ones.

2006-03-28  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* examples/framework/diary/diary2.py: When the list is empty, pass None
	to proxy.set_model
	* examples/framework/news/news4.py: Fixing methods, so they work
	properly with both callbacks and keyactions.

2006-03-26  Johan Dahlin  <jdahlin@async.com.br>
	
	* kiwi/desktopparser.py: Add a GKeyFile inspired .desktop parser

2006-03-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/combo.py: